Change to contacto
Redirect email to contacto@walsom.com.co

--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
       <div class="col-md-12">
         <!-- contact form works with formspree.io  -->
         <!-- contact form activation doc: https://docs.themefisher.com/constra/contact-form/ -->
-        <form id="contact-form" action="https://formspree.io/f/xzbwvynv" method="POST" role="form">
+        <form id="contact-form" action="https://formspree.io/f/xdovnkjd" method="POST" role="form">
           <div class="error-container"></div>
           <div class="row">
             <div class="col-md-4">
