--- a/index.html
+++ b/index.html
@@ -227,51 +227,59 @@
     </section><!-- Service end -->
     <!--/ Service end-->
 
-    <section id="facts" class="facts-area dark-bg">
+    <!-- Materiales start -->
+    <section class="facts-area dark-bg">
       <div class="container">
-        <div class="row text-center">
-          <div class="col-lg-12">
-            <h2 class="section-title">Información hasta junio 2021</h2>
-            <h3 class="section-sub-title">Cantidad de material instalado</h3>
-          </div>
-        </div>
-        <div class="fact-flexbox">
+        <div class="row">
+            <div class="col">
+              <h2 class="section-title">Información hasta junio 2021</h2>
+              <h3 class="section-sub-title">Cantidad de material instalado</h3>
+              <div class="row all-clients">
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Mantos Asfáltico</h3>
+                    <h4 class="fact-numbers" >6.070.000 m²</h4>
+                  </div><!-- Client 1 end -->
 
-            <div class="fact-box">
-                <h3 class="fact-box-title">Mantos Asfáltico</h3>
-                <h4 class="fact-numbers" >6.070.000 m²</h4>
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Membrana PVC</h3>
+                    <h4 class="fact-numbers" >86.300 m²</h4>
+                  </div><!-- Client 2 end -->
 
-                <h3 class="fact-box-title">Membrana PVC</h3>
-                <h4 class="fact-numbers" >86.300 m²</h4>
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Membrana tanques</h3>
+                    <h4 class="fact-numbers" >47.500 m²</h4>
+                  </div><!-- Client 3 end -->
 
-            </div>
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Membrana TPO</h3>
+                    <h4 class="fact-numbers" >117.800 m²</h4>
+                  </div><!-- Client 4 end -->
 
-            <div class="fact-box">
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Poliuretano</h3>
+                    <h4 class="fact-numbers" >24.800 m²</h4>
+                  </div><!-- Client 5 end -->
 
-              <h3 class="fact-box-title">Membrana tanques</h3>
-              <h4 class="fact-numbers" >47.500 m²</h4>
+                  <div class="col-sm-4 col-6">
+                    <h3 class="fact-box-title">Poliurea</h3>
+                    <h4 class="fact-numbers" >15.900 m²</h4>
+                  </div><!-- Client 6 end -->
+
+              </div><!-- Clients row end -->
+
+              <!--/ Testimonial carousel end-->
+            </div><!-- Col end -->
 
 
 
-              <h3 class="fact-box-title">Membrana TPO</h3>
-              <h4 class="fact-numbers" >117.800 m²</h4>
-
-          </div>
-
-
-            <div class="fact-box">
-              <h3 class="fact-box-title">Poliuretano</h3>
-              <h4 class="fact-numbers" >24.800 m²</h4>
-
-              <h3 class="fact-box-title">Poliurea</h3>
-              <h4 class="fact-numbers" >15.900 m²</h4>
-            </div>
-            <!--/ Testimonial carousel end-->
         </div>
         <!--/ Content row end -->
       </div>
       <!--/ Container end -->
-    </section><!-- Facts end -->
+    </section><!-- Content end -->
+    <!-- Materiales end -->
+
+
 
     <!-- Project Area -->
     <section id="project-area" class="project-area solid-bg">
@@ -566,8 +574,11 @@
 
         </div><!-- Content row end -->
         <br/>
-        <div align="right";>
-          <a href="files/walsomsas22-23.pdf" download="WalsomSAS" style="color:#0c5c94; font-weight: bold;" target=”_blank”>Nuestra presentación empresarial 2022/2023</a>
+        <div align="right">
+          <a style="font-weight=bold">Nuestra presentación empresarial 2022/2023<a/>
+          <a href="files/walsomsas22-23.pdf" download="WalsomSAS" style="font-weight: bold;" target=”_blank”>
+            <img alt="pdfDownload" src="images/icon-image/download-pdf.png" width= 20px height=20px>
+          </a>
 
         </div>
 
