--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
     </header>
     <!--/ Header end -->
 
-    <div id="banner-area" class="banner-area" style="background-image:url(images/banner/banner_uniandes.png)">
+    <div id="banner-area" class="banner-area" style="background-image:url(images/banner/banner_uniandes.jpg)">
       <div class="banner-text">
         <div class="container">
             <div class="row">
