--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </section><!-- Service end -->
     <!--/ Service end-->
 
-    <!-- Materiales start -->
+    <!-- Facts start -->
     <section class="facts-area dark-bg">
       <div class="container">
         <div class="row">
@@ -236,7 +236,7 @@
               <h3 class="section-sub-title">Cantidad de material instalado</h3>
               <div class="row all-clients">
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Mantos Asfáltico</h3>
+                    <h3 class="fact-box-title">Manto Asfáltico</h3>
                     <h4 class="fact-numbers" >6.070.000 m²</h4>
                   </div><!-- Client 1 end -->
 
@@ -277,7 +277,7 @@
       </div>
       <!--/ Container end -->
     </section><!-- Content end -->
-    <!-- Materiales end -->
+    <!-- Facts end -->
 
 
 
@@ -422,7 +422,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a>PH Somos Sierra</a>
+                        <a>PH Somosierra</a>
                       </h3>
                       <p class="project-cat">Impermeabilización</p>
                       <p class="project-cat">2021</p>
@@ -576,7 +576,7 @@
         <br/>
         <div align="right">
           <a style="font-weight=bold">Nuestra presentación empresarial 2022/2023<a/>
-          <a href="files/walsomsas22-23.pdf" download="WalsomSAS" style="font-weight: bold;" target=”_blank”>
+          <a href="files/PresentacionEmpresarial-WalsomSAS.pdf" download="Presentación Empresarial - Walsom SAS" style="font-weight: bold;" target=”_blank”>
             <img alt="pdfDownload" src="images/icon-image/download-pdf.png" width= 20px height=20px>
           </a>
 
