--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,10 @@
                   </li>
               </ul>
               <ul class="top-info text-center text-md-left">
+                  <li><i class="fab fa-whatsapp"></i> <p class="info-text">+57 3164326754</p>
+                  </li>
+              </ul>
+              <ul class="top-info text-center text-md-left">
                   <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Cra 72 a # 66 - 22, Bogotá - Colombia</p>
                   </li>
               </ul>
@@ -132,7 +136,8 @@
     <!--/ Title row end -->
 
     <div class="row">
-      <div class="col-md-4">
+
+      <div class="col-md-3">
         <div class="ts-service-box-bg text-center h-100">
           <span class="ts-service-icon icon-round">
             <i class="fas fa-map-marker-alt mr-0"></i>
@@ -144,7 +149,7 @@
         </div>
       </div><!-- Col 1 end -->
 
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ts-service-box-bg text-center h-100">
           <span class="ts-service-icon icon-round">
             <i class="fa fa-envelope mr-0"></i>
@@ -156,7 +161,7 @@
         </div>
       </div><!-- Col 2 end -->
 
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="ts-service-box-bg text-center h-100">
           <span class="ts-service-icon icon-round">
             <i class="fa fa-phone-square mr-0"></i>
@@ -164,6 +169,18 @@
           <div class="ts-service-box-content">
             <h4>Teléfono</h4>
             <p>(+57) 601-2243414</p>
+          </div>
+        </div>
+      </div><!-- Col 3 end -->
+
+      <div class="col-md-3">
+        <div class="ts-service-box-bg text-center h-100">
+          <span class="ts-service-icon icon-round">
+            <i class="fab fa-whatsapp mr-0"></i>
+          </span>
+          <div class="ts-service-box-content">
+            <h4>Whatsapp</h4>
+            <p>(+57) 3164326754</p>
           </div>
         </div>
       </div><!-- Col 3 end -->
@@ -228,8 +245,7 @@
           <h3 class="widget-title">Horario Laboral</h3>
           <div class="working-hours">
             Trabajamos los 5 días hábiles de la semana, excluyendo los días festivos.
-            <br><br>Lunes - Jueves: 7:00 AM - 5:00 PM
-            <br> Viernes: 7:00 AM - 6:00 PM
+            <br><br>Lunes - Viernes: 7:00 AM - 5:00 PM
 
           </div>
         </div><!-- Col end -->
