--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     </li>
                 </ul>
                 <ul class="top-info text-center text-md-left">
+                    <li><i class="fab fa-whatsapp"></i> <p class="info-text">+57 3164326754</p>
+                    </li>
+                </ul>
+                <ul class="top-info text-center text-md-left">
                     <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Cra 72 a # 66 - 22, Bogotá - Colombia</p>
                     </li>
                 </ul>
@@ -320,7 +324,7 @@
                   <div class="project-item-info">
                     <div class="project-item-info-content">
                       <h3 class="project-item-title">
-                        <a>Colegio Anglo Americano</a>
+                        <a>Colegio Angloamericano</a>
                       </h3>
                       <p class="project-cat">Impermeabilizacion</p>
                       <p class="project-cat">2022</p>
@@ -592,7 +596,7 @@
       <div class="container">
         <div class="row">
             <div class="col">
-              <h3 class="column-title">Materiales que usamos</h3>
+              <h3 class="column-title">Nuestros aliados</h3>
               <div class="row all-clients">
                   <div class="col-sm-4 col-6">
                     <figure class="clients-logo">
@@ -663,8 +667,7 @@
             <h3 class="widget-title">Horario Laboral</h3>
             <div class="working-hours">
               Trabajamos los 5 días hábiles de la semana, excluyendo los días festivos.
-              <br><br>Lunes - Jueves: 7:00 AM - 5:00 PM
-              <br> Viernes: 7:00 AM - 6:00 PM
+              <br><br>Lunes - Viernes: 7:00 AM - 5:00 PM
 
             </div>
           </div><!-- Col end -->
