--- a/about.html
+++ b/about.html
@@ -51,6 +51,10 @@
                     </li>
                 </ul>
                 <ul class="top-info text-center text-md-left">
+                    <li><i class="fab fa-whatsapp"></i> <p class="info-text">+57 3164326754</p>
+                    </li>
+                </ul>
+                <ul class="top-info text-center text-md-left">
                     <li><i class="fas fa-map-marker-alt"></i> <p class="info-text">Cra 72 a # 66 - 22, Bogotá - Colombia</p>
                     </li>
                 </ul>
@@ -162,8 +166,7 @@
               <h3 class="widget-title">Horario Laboral</h3>
               <div class="working-hours">
                 Trabajamos los 5 días hábiles de la semana, excluyendo los días festivos.
-                <br><br>Lunes - Jueves: 7:00 AM - 5:00 PM
-                <br> Viernes: 7:00 AM - 6:00 PM
+                <br><br>Lunes - Viernes: 7:00 AM - 5:00 PM
 
               </div>
             </div><!-- Col end -->
