pull from main website and changes to numbers

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <img loading="lazy" src="images/services/service_impermeabilizacion_icon.png" alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Impermeabilización</a></h3>
+                    <h3 class="service-box-title">Impermeabilización</h3>
                     <p>Protección y mantenimiento de las cubiertas de las edificaciones del agua por medio de la última tecnología en mantos, membranas, poliuretano y poliurea.</p>
                   </div>
               </div><!-- Service 1 end -->
@@ -172,7 +172,7 @@
                     <img loading="lazy" src="images/services/service_techo_verde_icon.png" alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Cubiertas verdes</a></h3>
+                    <h3 class="service-box-title">Cubiertas verdes</h3>
                     <p>Impermeabilización del espacio para el futuro desarrollo de cubiertas verdes, mediante técnicas y materiales innovadores.</p>
                   </div>
               </div><!-- Service 2 end -->
@@ -182,7 +182,7 @@
                     <img loading="lazy" src="images/services/service_venta_material_icon.png"  alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Venta de material</a></h3>
+                    <h3 class="service-box-title">Venta de material</h3>
                     <p>Comercialización de materiales impermeabilizantes al detal para el ramo de la construcción. Se ofrecen diferentes tipos de rollos, tales como Danosa, Texsa , entre otros.</p>
                   </div>
               </div><!-- Service 3 end -->
@@ -199,7 +199,7 @@
                     <img loading="lazy" src="images/services/service_mantenimiento_icon.png" alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Mantenimientos</a></h3>
+                    <h3 class="service-box-title">Mantenimientos</h3>
                     <p>Cuidado de las áreas anteriormente intervenidas. Para prevenir el desgaste, daños prematuros de los materiales usados y prolongar su durabilidad. </p>
                   </div>
               </div><!-- Service 4 end -->
@@ -209,7 +209,7 @@
                     <img loading="lazy" src="images/services/service_tanque_icon.png" alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Tanques</a></h3>
+                    <h3 class="service-box-title">Tanques</h3>
                     <p>Impermeabilización y adecuación de depósitos de agua, garantizando las condiciones óptimas para mantener la potabilidad del agua.</p>
                   </div>
               </div><!-- Service 5 end -->
@@ -219,7 +219,7 @@
                     <img loading="lazy" src="images/services/service_consultoria_icon.png" alt="service-icon">
                   </div>
                   <div class="ts-service-box-info">
-                    <h3 class="service-box-title"><a href="#">Consultoría</a></h3>
+                    <h3 class="service-box-title">Consultoría</h3>
                     <p>Asesorías en el área de la impermeabilización, al poner al servicio el conocimiento y experiencia de más de 70 años en el mercado.</p>
                   </div>
               </div><!-- Service 6 end -->
@@ -236,37 +236,37 @@
       <div class="container">
         <div class="row">
             <div class="col">
-              <h2 class="section-title">Información hasta junio 2021</h2>
+              <h2 class="section-title">Información hasta febrero 2025</h2>
               <h3 class="section-sub-title">Cantidad de material instalado</h3>
               <div class="row all-clients">
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Manto Asfáltico</h3>
-                    <h4 class="fact-numbers" >6.070.000 m²</h4>
+                    <h3 class="fact-box-title">Mantos Asfálticos</h3>
+                    <h4 class="fact-numbers" >6.182.950 m²</h4>
                   </div><!-- Client 1 end -->
 
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Membrana PVC</h3>
-                    <h4 class="fact-numbers" >86.300 m²</h4>
+                    <h3 class="fact-box-title">Membrana PVC 1,2mm y 1,5mm</h3>
+                    <h4 class="fact-numbers" >110.850 m²</h4>
                   </div><!-- Client 2 end -->
 
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Membrana tanques</h3>
-                    <h4 class="fact-numbers" >47.500 m²</h4>
+                    <h3 class="fact-box-title">Membrana tanques 1,2mm y 2mm</h3>
+                    <h4 class="fact-numbers" >61.500 m²</h4>
                   </div><!-- Client 3 end -->
 
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Membrana TPO</h3>
-                    <h4 class="fact-numbers" >117.800 m²</h4>
+                    <h3 class="fact-box-title">Membrana TPO 1,2mm y 1,5 mm</h3>
+                    <h4 class="fact-numbers" >122.250 m²</h4>
                   </div><!-- Client 4 end -->
 
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Poliuretano</h3>
-                    <h4 class="fact-numbers" >24.800 m²</h4>
+                    <h3 class="fact-box-title">Poliuretanos</h3>
+                    <h4 class="fact-numbers" >97.950 m²</h4>
                   </div><!-- Client 5 end -->
 
                   <div class="col-sm-4 col-6">
-                    <h3 class="fact-box-title">Poliurea</h3>
-                    <h4 class="fact-numbers" >15.900 m²</h4>
+                    <h3 class="fact-box-title">Poliurea pura</h3>
+                    <h4 class="fact-numbers" >37.850 m²</h4>
                   </div><!-- Client 6 end -->
 
               </div><!-- Clients row end -->
@@ -656,6 +656,7 @@
     <!-- Materiales end -->
 
   <footer id="footer" class="footer bg-overlay">
+    <script>!function(){var e,t,n,a;window.MyAliceWebChat||((t=document.createElement("div")).id="myAliceWebChat",(n=document.createElement("script")).type="text/javascript",n.async=!0,n.src="https://widget.myalice.ai/index.js",(a=(e=document.body.getElementsByTagName("script"))[e.length-1]).parentNode.insertBefore(n,a),a.parentNode.insertBefore(t,a),n.addEventListener("load",(function(){MyAliceWebChat.init({selector:"myAliceWebChat",number:"573164326754",message:"Hola, me gustaría conocer más de los servicios que ofrece Walsom",color:"#25D366",channel:"wa",boxShadow:"none",text:"WhatsApp",theme:"light",position:"left",mb:"20px",mx:"20px",radius:"20px"})})))}();</script>
     <div class="footer-main">
       <div class="container">
         <div class="row justify-content-between">
