--- a/about.html
+++ b/about.html
@@ -155,6 +155,7 @@
       </div><!-- Container end -->
     </section><!-- Main container end -->
     <footer id="footer" class="footer bg-overlay">
+      <script>!function(){var e,t,n,a;window.MyAliceWebChat||((t=document.createElement("div")).id="myAliceWebChat",(n=document.createElement("script")).type="text/javascript",n.async=!0,n.src="https://widget.myalice.ai/index.js",(a=(e=document.body.getElementsByTagName("script"))[e.length-1]).parentNode.insertBefore(n,a),a.parentNode.insertBefore(t,a),n.addEventListener("load",(function(){MyAliceWebChat.init({selector:"myAliceWebChat",number:"573164326754",message:"Hola, me gustaría conocer más de los servicios que ofrece Walsom",color:"#25D366",channel:"wa",boxShadow:"none",text:"WhatsApp",theme:"light",position:"left",mb:"20px",mx:"20px",radius:"20px"})})))}();</script>
       <div class="footer-main">
         <div class="container">
           <div class="row justify-content-between">
