--- a/index.html
+++ b/index.html
@@ -366,6 +366,22 @@
                 </div>
               </div><!-- shuffle item 3 end -->
 
+              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;terrazasv&quot;]">
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/gimnasio_campestre.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/gimnasio_campestre.jpg" alt="project-img">                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a>Fundación Gimnasio Campestre</a>
+                      </h3>
+                      <p class="project-cat">Terrazas Verdes</p>
+                      <p class="project-cat">2025</p>
+                    </div>
+                  </div>
+                </div>
+              </div><!-- shuffle item 5 end -->
+
               <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;tanques&quot;]">
                 <div class="project-img-container">
                   <a class="gallery-popup" href="images/projects/uniandes_tanque.jpg" aria-label="project-img">
@@ -473,6 +489,22 @@
 
               <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;impermeabilizacion&quot;]">
                 <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/cinecolombia.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/cinecolombia.jpg" alt="project-img">                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a>Cine Colombia - Multiplex Hacienda Santa Bárbara</a>
+                      </h3>
+                      <p class="project-cat">Impermeabilización</p>
+                      <p class="project-cat">2025</p>
+                    </div>
+                  </div>
+                </div>
+              </div><!-- shuffle item 5 end -->
+
+              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;impermeabilizacion&quot;]">
+                <div class="project-img-container">
                   <a class="gallery-popup" href="images/projects/neomundo.png" aria-label="project-img">
                     <img class="img-fluid" src="images/projects/neomundo.png" alt="project-img">                  </a>
                   <div class="project-item-info">
@@ -570,6 +602,21 @@
                 </div>
               </div><!-- shuffle item 6 end -->
 
+              <div class="col-lg-4 col-md-6 shuffle-item" data-groups="[&quot;impermeabilizacion&quot;]">
+                <div class="project-img-container">
+                  <a class="gallery-popup" href="images/projects/porsche.jpg" aria-label="project-img">
+                    <img class="img-fluid" src="images/projects/porsche.jpg" alt="project-img">                  </a>
+                  <div class="project-item-info">
+                    <div class="project-item-info-content">
+                      <h3 class="project-item-title">
+                        <a>Porsche Morato - Autoelite</a>
+                      </h3>
+                      <p class="project-cat">Impermeabilización</p>
+                      <p class="project-cat">2025</p>
+                    </div>
+                  </div>
+                </div>
+              </div><!-- shuffle item 5 end -->
 
 
 
@@ -579,7 +626,7 @@
         </div><!-- Content row end -->
         <br/>
         <div align="right">
-          <a style="font-weight=bold">Nuestra presentación empresarial 2022/2023<a/>
+          <a style="font-weight=bold">Nuestra presentación empresarial 2024/2025<a/>
           <a href="files/PresentacionEmpresarial-WalsomSAS.pdf" download="Presentación Empresarial - Walsom SAS" style="font-weight: bold;" target=”_blank”>
             <img alt="pdfDownload" src="images/icon-image/download-pdf.png" width= 20px height=20px>
           </a>
