--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
         </div>
       </div>
-      <div class="banner-carousel-item" style="background-image:url(images/slider-main/Elemento_4.jpg)">
+      <div class="banner-carousel-item" style="background-image:url(images/slider-main/dron_porsche.mp4">
         <div class="slider-content text-left">
             <div class="container">
               <div class="box-slider-content">
@@ -282,8 +282,6 @@
       <!--/ Container end -->
     </section><!-- Content end -->
     <!-- Facts end -->
-
-
 
     <!-- Project Area -->
     <section id="project-area" class="project-area solid-bg">
@@ -701,6 +699,8 @@
       <!--/ Container end -->
     </section><!-- Content end -->
     <!-- Materiales end -->
+
+
 
   <footer id="footer" class="footer bg-overlay">
     <script>!function(){var e,t,n,a;window.MyAliceWebChat||((t=document.createElement("div")).id="myAliceWebChat",(n=document.createElement("script")).type="text/javascript",n.async=!0,n.src="https://widget.myalice.ai/index.js",(a=(e=document.body.getElementsByTagName("script"))[e.length-1]).parentNode.insertBefore(n,a),a.parentNode.insertBefore(t,a),n.addEventListener("load",(function(){MyAliceWebChat.init({selector:"myAliceWebChat",number:"573164326754",message:"Hola, me gustaría conocer más de los servicios que ofrece Walsom",color:"#25D366",channel:"wa",boxShadow:"none",text:"WhatsApp",theme:"light",position:"left",mb:"20px",mx:"20px",radius:"20px"})})))}();</script>
