--- a/contact.html
+++ b/contact.html
@@ -240,7 +240,7 @@
       <div class="row justify-content-between">
         <div class="col-lg-4 col-md-6 footer-widget footer-about">
           <h3 class="widget-title">Sobre nosotros</h3>
-          <p>Empresa líder en Colombia en el área de la impermeabilización, con varios años de experiencia y cientos de proyectos que respaldan la alta calidad, característica de Walsom.</p>
+          <p>Walsom ha sido sinónimo de innovación y excelencia en  la impermeabilización en Colombia. Lo que comenzó como un legado de conocimiento europeo, evolucionó para convertirse en una empresa líder, impulsada por una constante búsqueda de tecnologías de vanguardia y la pasión por resolver los desafíos más complejos.</p>
         </div><!-- Col end -->
         <div class="col-lg-4 col-md-6 footer-widget mt-5 mt-md-0">
           <h3 class="widget-title">Horario Laboral</h3>
